chore: fix projects miss-alignment

--- a/domain/home/about/about.module.scss
+++ b/domain/home/about/about.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 10rem;
+  scroll-margin-top: 10rem;
 
   .container {
     position: static;
